--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,78 @@
-/* место для вашего кода */
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1100.0px;
+  height: 293.0px;
+
+}
+
+.header_menu {
+  padding: 135px 36.52px 138px 50px;
+  color: #000;
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: normal;
+  margin-right: 4px;
+
+}
+
+.header_links_list {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  gap: 12.7px; 
+  width: 391.5px;
+  height: 22.0px; 
+  padding-right: 8.7px;
+  list-style: circle;
+  white-space: nowrap;
+  
+}
+
+.header_menu_item {
+text-decoration: underline;
+}
+
+.header_menu_item_active {
+  text-decoration: none;
+  list-style: none;
+  
+}
+
+.header_logo {
+  display: block;
+  width: 137px;
+}
+
+.header_logo_image {
+  width: 100%;
+}
+
+.address {
+  display: grid;
+  width: 240.0px;
+  height: 98.0px;
+  margin: 95px 50px 100px 184px;
+}
+
+.header_adress_list {
+  list-style: none;
+}
+.header_adress_item_links {
+  text-decoration: none;
+  border-bottom: 1.6px solid #000;
+}
+
+.header_adress {
+  color: #000;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+  margin-left: 5px;
+  
+}
+
