--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,16 @@
 .header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 1100.0px;
-  height: 293.0px;
+  display: grid;
+  grid-template-columns: 1fr 148px 1fr;
+  justify-content: space-between;
+  padding: 92px 50px 96px 50px;
+  max-width: 1100.0px;
+  max-height: 293.0px;
 
 }
 
 .header_menu {
-  padding: 135px 36.52px 138px 50px;
+  display: grid;
+  align-items: center;
   color: #000;
   font-family: Raleway;
   font-weight: 400;
@@ -27,7 +29,6 @@
   height: 22.0px; 
   padding-right: 8.7px;
   list-style: circle;
-  white-space: nowrap;
   
 }
 
@@ -52,9 +53,7 @@ text-decoration: underline;
 
 .address {
   display: grid;
-  width: 240.0px;
-  height: 98.0px;
-  margin: 95px 50px 100px 184px;
+  padding: 3px 0 4px 184px;
 }
 
 .header_adress_list {
@@ -72,7 +71,6 @@ text-decoration: underline;
   font-style: normal;
   font-weight: 400;
   line-height: 24.3px;
-  margin-left: 5px;
-  
+  margin-right: 5px;
 }
 
