--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,7 @@
   height: 22.0px; 
   padding-right: 8.7px;
   list-style: circle;
+  white-space: nowrap;
   
 }
 
@@ -72,5 +73,6 @@ text-decoration: underline;
   font-weight: 400;
   line-height: 24.3px;
   margin-right: 5px;
+  
 }
 
