--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 .header {
   display: grid;
-  grid-template-columns: 1fr 148px 1fr;
-  justify-content: space-between;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items:center;
   padding: 92px 50px 96px 50px;
   max-width: 1100.0px;
   max-height: 293.0px;
@@ -17,7 +17,8 @@
   font-size: 18px;
   font-style: normal;
   line-height: normal;
-  margin-right: 4px;
+  margin-left: 4px;
+  margin-bottom: 3.4px;
 
 }
 
@@ -46,15 +47,19 @@ text-decoration: underline;
 .header_logo {
   display: block;
   width: 137px;
+  margin-left: 4.5px;
+  
 }
 
 .header_logo_image {
   width: 100%;
+  
 }
 
 .address {
   display: grid;
-  padding: 3px 0 4px 184px;
+  padding: 2px 0px 7px 189px;
+  justify-self: end;
 }
 
 .header_adress_list {
@@ -72,7 +77,65 @@ text-decoration: underline;
   font-style: normal;
   font-weight: 400;
   line-height: 24.3px;
-  margin-right: 5px;
+}
+
+.cover { 
+  min-width: 1100.0px;
+  min-height: 757.0px;
+  position: relative;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgb(0 0 0 / 0.6);
+}
+
+.cover_title {
+  padding: 165px 50px 207px 50px;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+}
+
+.cover_text {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 20px;
+    color: #fff;
+    font-family: Raleway;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115%;
+    letter-spacing: 0.3em; 
+    text-transform: uppercase;
+    
+}
+
+.aligned_text {
   
 }
+
+.aligned_text_center {
+  max-width: 339px;
+  justify-self: center;
+  align-self: center;
+  
+}
+
+.aligned_text_right {
+  max-width: 387px;
+  justify-self: end;
+  align-self: end;
+  
+}
+
 
