--- a/styles/style.css
+++ b/styles/style.css
@@ -80,12 +80,11 @@ text-decoration: underline;
 }
 
 .cover { 
-  min-width: 1100.0px;
-  min-height: 757.0px;
   position: relative;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-size: 1100px 757px;
 }
 
 .overlay {
@@ -138,4 +137,40 @@ text-decoration: underline;
   
 }
 
+.cover_description {
+  min-width: 637px ;
+  min-height: 28px ;
+  display: grid;
+  align-items: baseline;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 51px;
+  padding: 105px 0px 50px 0px;
+  position: relative;
+  z-index: 2;
+  color: #FFF;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 19px;
+}
+
+.cover_description > .bet_button {
+  min-height: 51px;
+  min-width: 256px;
+  color: #FFF;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  background-color: transparent;
+  border-color: #FFF;
+  
+  
+}
 
