Исправлены указанные ошибки

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,10 @@
   padding-right: 44px;
 }
 
+.header_links {
+  text-decoration: none;
+}
+
 .header_links_list {
   display: flex;
   justify-content: space-between;
@@ -47,33 +51,29 @@
   padding-right: 38px;
   font-size: 18px;
   line-height: 24.3px;
-}
-
-.header_adress_list {
-  list-style: none;
-}
-
-.header_adress_item_links {
-  border-bottom: 1.6px solid #000;
   text-decoration: none;
 }
 
-.cover { 
+.no_bullit {
+  list-style: none;
+}
+
+.cover {
   position: relative;
   z-index: 1;
   max-width: 1100px;
   max-height: 757px;
+  padding-right: 50px; 
+  padding-left: 50px;
   color: #fff;
   background-image: url(../images/cover.jpg);
-  background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
 }
 
 .overlay {
   position: absolute;
-  top: 0;
-  left: 0;
+  inset: 0;
   z-index: -1;
   width: 100%;
   height: 100%;
@@ -84,13 +84,14 @@
   position: relative;
   z-index: 2;
   width: 100%;
-  padding: 165px 50px 207px 50px;
+  
 }
 
 .cover_text {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 20px;
+  padding-top: 165px;
   font-weight: 700;
   font-size: 100px;
   line-height: 115%;
@@ -115,7 +116,6 @@
   z-index: 2;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-template-rows: 51px;
   align-items: center;
   padding: 105px 0px 50px 0px;
   font-size: 22px;
@@ -125,9 +125,9 @@
 }
 
 .cover_description > .bet_button {
-  min-height: 51px;
   min-width: 256px;
-  border-color: #fff;
+  border: 1px solid #fff;
+  padding: 10px 0;
   color: #FFF;
   font-weight: 500;
   text-align: center;
@@ -136,7 +136,7 @@
 }
 
 .lots {
-  margin: 180px 24px 0px;
+  margin: 180px 24px 118px;
 }
 
 .lots_heading {
@@ -167,7 +167,7 @@
   flex-wrap: wrap;
   justify-content: center;
   min-height: 100%;
-  padding: 48px 40px;
+  padding: 48px 40px ;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -198,9 +198,9 @@
 }
 
 .more {
-  padding-top: 30px;
-  padding-bottom: 118px;
-  padding-left: 40px;
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 41px;
   color: #000;
   font-size: 20px;
 }
@@ -212,7 +212,6 @@
   margin: 0;
   color: #000;
 }
-
 
 .about_logo {
   display: flex;
@@ -249,6 +248,7 @@
   flex-direction: column;
   gap: 24px;
   padding-top: 100px;
+  padding-right: 24px;
   font-size: 20px;
   line-height: 24px;
   text-wrap: balance;
@@ -257,8 +257,8 @@
 .footer {
   display: grid;
   grid-template-columns: 1fr 164px 1fr;
-  min-height: 180px;
-  margin-top: 180px;
+  margin-top: 154px;
+  margin-bottom: 100px;
   padding-top: 25px;
   padding-right: 50px;
   padding-left: 50px;
