--- a/styles/style.css
+++ b/styles/style.css
@@ -61,8 +61,6 @@
 .cover {
   position: relative;
   z-index: 1;
-  max-width: 1100px;
-  max-height: 757px;
   padding-right: 50px; 
   padding-left: 50px;
   color: #fff;
@@ -257,7 +255,7 @@
 .footer {
   display: grid;
   grid-template-columns: 1fr 164px 1fr;
-  margin-top: 158px;
+  margin-top: 157px;
   margin-bottom: 100px;
   padding-top: 25px;
   padding-right: 50px;
@@ -275,6 +273,10 @@
   font-size: 18px; 
 }
 
+.footer_links {
+  text-decoration: none;
+}
+
 .footer_links_list {
   display: flex;
   flex-direction: column;
@@ -285,6 +287,7 @@
 
 .footer_menu_item {
   border-bottom: 1px solid #000;
+  text-decoration: none;
 }
 
 .footer_menu_item_active {
